[project]
name = "pacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "ursina>=8.3.0",
]

[dependency-groups]
dev = [
    "isort>=8.0.1",
]
